@@ -6,6 +6,7 @@ V4.1.0 (in progress)
 [FEATURE] : Add vhost subfolder support for Automne installation
 [FEATURE] : Add import/export of polymod modules structures
 [FEATURE] : Add export of Automne activity logs in CSV
+[FEATURE] : Add Google Chrome Frame support (via the configuration constant APPLICATION_GCF_SUPPORT) 
 
 V4.0.2 (25/05/2010)
 [BUG] : Corrected bugs : 269, 270, 486, 497 (see http://www.automne.ws/bug/)
